--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" href="logoimansur.ico" type="image/x-icon">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+    
+  </app-root>
 </body>
 </html>
